test/spec_vectors/i32/fail/module_35.wat
(module (func $type-binary-1st-operand-empty-in-return (return (i32.add)) (drop)))